@@ -1,14 +1,14 @@
 
 .onLoad <- function(libname, pkgname ){
-	minversion <- packageDescription( pkgname)$MinimumLibProtoVersion
-	minversion <- as.integer( gsub( "[[:space:]]+", "", minversion ) )
-	.Call( "check_libprotobuf_version", minversion, PACKAGE = "RProtoBuf" )
-	readProtoFiles( package = pkgname )
-	attachDescriptorPool( pos = length(search()) )
-	
-	if( exists( ".httpd.handlers.env", asNamespace( "tools" ) ) ){
-		e <- tools:::.httpd.handlers.env
-		e[["RProtoBuf"]] <- RProtoBuf.http.handler
-	}
+    minversion <- packageDescription(pkgname, lib.loc=libname)$MinimumLibProtoVersion
+    minversion <- as.integer( gsub( "[[:space:]]+", "", minversion ) )
+    .Call( "check_libprotobuf_version", minversion, PACKAGE = "RProtoBuf" )
+    readProtoFiles( package = pkgname )
+    attachDescriptorPool( pos = length(search()) )
+
+    if( exists( ".httpd.handlers.env", asNamespace( "tools" ) ) ){
+        e <- tools:::.httpd.handlers.env
+        e[["RProtoBuf"]] <- RProtoBuf.http.handler
+    }
 }
 
